--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ REFRESH_TOKEN_SECRET = '#y6WRmB]:bqCVF[us_uggrCzvS8$"TR/Q!g[VJk`PHJv7b9}Qq'
 USER_EMAIL = hoangdev161201@gmail.com
 PASS_EMAIL = kingspear1999
 
-URL_CLIENT = https://entershipweb.vercel.app/
+URL_CLIENT = https://entershipweb.vercel.app
 
 URL_MONGODB = mongodb+srv://admin4:kingspear1999@cluster0.trnqb.mongodb.net/CMS?retryWrites=true&w=majority
