--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ USER_EMAIL = hoangdev161201@gmail.com
 
 URL_MONGODB = mongodb+srv://admin4:kingspear1999@cluster0.trnqb.mongodb.net/CMS?retryWrites=true&w=majority
 
-URL_CLIENT = http://localhost:3000
+URL_CLIENT = https://entershipweb.vercel.app
 
 CLIENT_ID = 121243355202-c8565q2bsvhau8snrjsnc4ddle8c1ouq.apps.googleusercontent.com
 CLIENT_SECRET = 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
